--- a/css/base-style.css
+++ b/css/base-style.css
@@ -10,7 +10,7 @@ html {
 }
 
 :root {
-    --padding: 0 50px
+    --padding: 0 5vw
 }
 
 header {
@@ -39,24 +39,14 @@ ul {
     width: 400px;
 }
 
-main {
-    width: 100%;
-    padding: var(--padding);
-    background-color: #E8E8E8;
+i {
+    margin-right: 5px;
 }
 
-footer {
-    clear: both;
-    width: 100%;
-    height: 100px;
-    bottom: 0;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
-    margin-top: auto 0;
-    color: white;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+main {
+    width: 100%;
+    height: fit-content;
+    padding: 30px 5vw;
+    background-color: #E8E8E8;
 }
